datasource db {
  provider = "postgresql"
}

generator client {
  provider = "prisma-client-js"
  binaryTargets = ["native"]
}

model User {
  id    String  @id @default(uuid())
  email String  @unique
  name  String?
  password String?
  boards   BoardMember[]
  createdBoards Board[]
  shapes   Shape[]
  messages Message[]
  comments Comment[]
  logs     AuditLog[]
  notifications Notification[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Board {
  id    String @id @default(uuid())
  title String

  creatorId String
  creator   User   @relation(fields: [creatorId], references: [id])

  members   BoardMember[]
  shapes    Shape[]
  snapshots Snapshot[]
  messages  Message[]
  comments  Comment[]
  assets    Asset[]
  logs      AuditLog[]
  notifications Notification[]
  settings  BoardSettings?
  thumbnailUrl String?
  currentSnapshotVersion Int?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([title, creatorId])
}

model BoardMember {
  id String @id @default(uuid())

  userId    String
  boardId   String
  role      Role
  isStarred Boolean @default(false)

  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  board Board @relation(fields: [boardId], references: [id], onDelete: Cascade)

  @@unique([userId, boardId])
}

model Shape {
  id String @id @default(uuid())

  boardId String
  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)

  userId String
  user   User   @relation(fields: [userId], references: [id])

  type ShapeType
  data Json

  comments Comment[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Snapshot {
  id String @id @default(uuid())

  boardId String
  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)

  version Int
  data    Json

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([boardId, version])
}

model Message {
  id String @id @default(uuid())

  boardId String
  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)

  userId String
  user   User   @relation(fields: [userId], references: [id])

  content String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Comment {
  id String @id @default(uuid())

  boardId String
  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)
  shapeId String
  shape   Shape  @relation(fields: [shapeId], references: [id], onDelete: Cascade)

  userId String
  user   User   @relation(fields: [userId], references: [id])

  content String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Asset {
  id String @id @default(uuid())

  boardId String
  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)

  url  String
  type AssetType

  uploadedBy String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model AuditLog {
  id String @id @default(uuid())

  boardId String
  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)

  userId String
  user   User   @relation(fields: [userId], references: [id])

  action   String
  metadata Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Notification {
  id String @id @default(uuid())

  userId  String
  user    User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  boardId String?
  board   Board?  @relation(fields: [boardId], references: [id], onDelete: Cascade)

  type    String   // "share_invite" | "mention"
  message String
  metadata Json?
  readAt  DateTime?

  createdAt DateTime @default(now())
}

model BoardSettings {
  id String @id @default(uuid())

  boardId String @unique
  board   Board  @relation(fields: [boardId], references: [id], onDelete: Cascade)

  isPublic Boolean @default(false)
  password String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum Role {
  ADMIN
  EDITOR
  VIEWER
}

enum ShapeType {
  RECTANGLE
  CIRCLE
  LINE
  ARROW
  TEXT
  DRAW
  IMAGE
}

enum AssetType {
  IMAGE
  PDF
  VIDEO
  FILE
}
